--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "browser/main.js",
   "repository": "https://github.com/GMOD/jbrowse.git",
   "devDependencies": {
-    "electron-prebuilt": "^1.1.0"
+    "electron": "^1.4.7"
   },
   "scripts": {
     "start": "electron browser/main.js"
